--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
 </head>
 
 <body>
-    <nav class="navbar bg-dark navbar-dark">
-        <div class="container">
+    <nav class="navbar bg-dark navbar-dark fixed-top">
+        <article class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img class="logo" src="./assets/img/sh2.jpg" alt="" />
                 SuperHero</a>
-        </div>
+        </article>
     </nav>
 
-    <main class="m-5 container">
-        <header class="text-center">
+    <main class="container-fluid mt-5 pt-5">
+        <header class="text-center pb-3">
             <img class="header_img" src="./assets/img/sh1.jpg" alt="" />
         </header>
 
         <section>
-            <h1>Encuentra tu superHero</h1>
+            <h1 class="text-center">Encuentra tu superHero</h1>
             <form id="form">
-                <div class="form-control">
+                <section id="forms" class="form-control text-center">
                     <label for="idHero">Ingresa el número del SuperHero a buscar</label>
-                    <input class="form-control" type="text" id="idHero" />
-                    <button class="btn btn-primary mt-3" type="submit">Buscar</button>
-                </div>
+                    <input class="form-control my-3" type="text" id="idHero" />
+                    <button id="btn" class="btn btn-primary mt-1 mb-3" type="submit">Buscar</button>
+                </section>
             </form>
         </section>
-
-        <section class="row mt-4">
-            <div id="resultado" class="col-md-6"></div>
-            <div id="chartContainer" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
-        </section>
     </main>
+
+    <section class="row mt-4">
+        <article id="resultado" class="col-md-6"></article>
+        <article id="chartContainer" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></article>
+    </section>
 
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
