:bookmark: code to show information and stats of hero developed :construction:

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <section class="row mt-4">
-        <article id="resultado" class="col-md-6"></article>
+        <article id="result" class="col-md-6"></article>
         <article id="chartContainer" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></article>
     </section>
 
