:books: Documentation added :bulb:

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </section>
     </main>
 
-    <section class="row mt-4">
+    <section id="dataHero" class="row mt-4">
         <article id="result" class="col-md-6"></article>
-        <article id="chartContainer" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></article>
+        <article id="chart" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></article>
     </section>
 
     <!-- BOOTSTRAP -->
