:art: a few styles improved :zap:

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="text-center">Encuentra tu superHero</h1>
             <form id="form">
                 <section id="forms" class="form-control text-center">
-                    <label for="idHero">Ingresa el número del SuperHero a buscar</label>
+                    <label for="idHero">Ingresa un número para buscar un SuperHero</label>
                     <input class="form-control my-3" type="text" id="idHero" />
                     <button id="btn" class="btn btn-primary mt-1 mb-3" type="submit">Buscar</button>
                 </section>
@@ -41,9 +41,9 @@
         </section>
     </main>
 
-    <section id="dataHero" class="row mt-4">
+    <section id="dataHero" class="row py-5">
         <article id="result" class="col-md-6"></article>
-        <article id="chart" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"></article>
+        <article id="chart" class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 ps-1"></article>
     </section>
 
     <!-- BOOTSTRAP -->
